--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -7,4 +7,34 @@
         android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="never" />
+
+    <item
+        android:id="@+id/menu_maptype"
+        android:title="@string/maptype">
+        <menu>
+            <group android:checkableBehavior="single">
+            <item
+                android:id="@+id/menu_maptype_normal"
+                android:checked="true"
+                android:title="@string/maptype_normal"
+                />
+            <item
+                android:id="@+id/menu_maptype_hybrid"
+                android:title="@string/maptype_hybrid"
+                />
+            <item
+                android:id="@+id/menu_maptype_satellite"
+                android:title="@string/maptype_satellite"
+                />
+            <item
+                android:id="@+id/menu_maptype_terrain"
+                android:title="@string/maptype_terrain"
+                />
+            <item
+                android:id="@+id/menu_maptype_none"
+                android:title="@string/maptype_none"
+                />
+            </group>
+        </menu>
+    </item>
 </menu>
