--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -18,4 +18,91 @@
         android:layout_height="match_parent"
         class="com.google.android.gms.maps.SupportMapFragment"/>
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="110dp"
+        android:layout_alignParentBottom="true"
+        android:background="#66FFFFFF">
+
+        <TableLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+        <TableRow>
+            <TextView
+                android:layout_width="80dp"
+                android:layout_marginLeft="4dp"
+                android:text="" />
+
+            <TextView
+                android:layout_width="80dp"
+                android:layout_gravity="right"
+                android:layout_marginLeft="4dp"
+                android:text="CReset" />
+
+            <TextView
+                android:layout_width="80dp"
+                android:layout_gravity="right"
+                android:layout_marginLeft="4dp"
+                android:text="WayPoint" />
+
+            <TextView
+                android:layout_width="80dp"
+                android:layout_gravity="right"
+                android:layout_marginLeft="4dp"
+                android:text="Total" />
+        </TableRow>
+
+        <TableRow>
+
+            <TextView
+                android:layout_marginLeft="4dp"
+                android:text="Distance" />
+
+            <TextView
+                android:id="@+id/textview_creset_distance"
+                android:layout_gravity="right"
+                android:layout_marginLeft="4dp"
+                android:text="0" />
+
+            <TextView
+                android:id="@+id/textview_wp_distance"
+                android:layout_gravity="right"
+                android:layout_marginLeft="4dp"
+                android:text="0" />
+
+            <TextView
+                android:id="@+id/textview_total_distance"
+                android:layout_gravity="right"
+                android:layout_marginLeft="4dp"
+                android:text="0" />
+        </TableRow>
+
+        <TableRow>
+
+            <TextView
+                android:layout_marginLeft="4dp"
+                android:text="Line" />
+
+            <TextView
+                android:id="@+id/textview_creset_line"
+                android:layout_gravity="right"
+                android:layout_marginLeft="4dp"
+                android:text="0" />
+
+            <TextView
+                android:id="@+id/textview_wp_line"
+                android:layout_gravity="right"
+                android:layout_marginLeft="4dp"
+                android:text="0" />
+
+            <TextView
+                android:id="@+id/textview_total_line"
+                android:layout_gravity="right"
+                android:layout_marginLeft="4dp"
+                android:text="0" />
+        </TableRow>
+        </TableLayout>
+
+    </RelativeLayout>
+
 </RelativeLayout>
